--- a/control
+++ b/control
@@ -2,7 +2,8 @@ Source: python-xtermcolor
 Section: python
 Priority: optional
 Maintainer: Salvo 'LtWorf' Tomaselli <tiposchi@tiscali.it>
-Build-Depends: debhelper (>= 7.0.50~), python (>= 2.6.6-3~)
+Build-Depends: debhelper (>= 7.0.50~), python (>= 2.6.6-3~),
+ python3 | python3-all | python3-dev | python3-all-dev
 Standards-Version: 3.9.3
 Homepage: https://github.com/broadinstitute/xtermcolor
                                                                                                                                                                                                 
