--- a/control
+++ b/control
@@ -2,10 +2,12 @@ Source: python-xtermcolor
 Section: python
 Priority: optional
 Maintainer: Salvo 'LtWorf' Tomaselli <tiposchi@tiscali.it>
-Build-Depends: debhelper (>= 7.0.50~), python (>= 2.6),
- python3-all
+Build-Depends: debhelper (>= 9), python (>= 2.6),
+ python3-all, dh-python
 Standards-Version: 3.9.6
 Homepage: https://github.com/broadinstitute/xtermcolor
+X-Python3-Version: 3.4
+X-Python-Version: 2.7
                                                                                                                                                                                                 
 Package: python-xtermcolor
 Architecture: all
