--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,10 @@ Source: python-xtermcolor
 Section: python
 Priority: optional
 Maintainer: Salvo 'LtWorf' Tomaselli <tiposchi@tiscali.it>
-Build-Depends: debhelper (>= 9), python-all,
- python3-all, dh-python
+Build-Depends: debhelper (>= 9),
+ python3-all,
+ dh-python,
+ python3-setuptools,
 Standards-Version: 3.9.6
 Homepage: https://github.com/broadinstitute/xtermcolor
 X-Python3-Version: >= 3.4
