--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,8 @@ Source: python-xtermcolor
 Section: python
 Priority: optional
 Maintainer: Salvo 'LtWorf' Tomaselli <tiposchi@tiscali.it>
-Build-Depends: debhelper (>= 9),
+Build-Depends: debhelper (>= 13),
+ debhelper-compat (= 13),
  python3-all,
  dh-python,
  python3-setuptools,
