--- a/debian/control
+++ b/debian/control
@@ -2,6 +2,7 @@ Source: python-xtermcolor
 Section: python
 Priority: optional
 Maintainer: Salvo 'LtWorf' Tomaselli <tiposchi@tiscali.it>
+Rules-Requires-Root: no
 Build-Depends: debhelper (>= 13),
  debhelper-compat (= 13),
  python3-all,
